--- a/style.css
+++ b/style.css
@@ -19,6 +19,8 @@ body {
     justify-content: stretch;
     align-items: stretch;
     margin: 50px 0;
+    border-bottom: solid;
+    background-color: gray;
 }
 
 .display {
@@ -28,8 +30,11 @@ body {
     align-items: center;
     border-color: black;
     border-style: solid;
+    border-width: 10px;
     padding-left:10px;
     padding-right: 10px;
+    background-color: cadetblue;
+
 }
 
 .row {
@@ -37,8 +42,12 @@ body {
     flex: 1;
     justify-content: stretch;
     align-items: stretch;
+    border-right: solid;
+    border-left: solid;
+    border-top-width: 0.1px;
 }
 
 button {
     flex: 1;
+    border-radius: 5px;
 }
