--- a/style.css
+++ b/style.css
@@ -24,9 +24,9 @@ body {
 }
 
 .display {
-  flex: 1;
+  flex: 3 0 0;
   display: flex;
-  justify-content: flex-start;
+  justify-content:start;
   align-items: center;
   border-color: black;
   border-style: solid;
@@ -34,6 +34,10 @@ body {
   padding-left: 10px;
   padding-right: 10px;
   background-color: cadetblue;
+  flex-wrap: wrap;
+  text-wrap: wrap;
+  font-size: 30px;
+  width: 450px;
 }
 
 .row {
@@ -49,4 +53,14 @@ body {
 button {
   flex: 1;
   border-radius: 5px;
+}
+
+.zero {
+    flex: 3 0;
+}
+.clear {
+    flex: 2 0;
+}
+.back {
+    flex: 1 0 0;
 }
