--- a/style.css
+++ b/style.css
@@ -11,9 +11,7 @@ body {
 .calculator {
   min-width: 300px;
   min-height: 300px;
-  max-height: 300px;
-  max-width: 300px;
-  flex: 0;
+  flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: stretch;
@@ -23,8 +21,19 @@ body {
   background-color: gray;
 }
 
+.container {
+  flex: 3;
+  display: flex;
+  flex-direction: column;
+  justify-content: stretch;
+  align-items: stretch;
+  border-bottom: solid;
+  background-color: gray;
+  height: 100%;
+}
+
 .display {
-  flex: 3 0 0;
+  flex: 4 0 0;
   display: flex;
   justify-content:start;
   align-items: center;
@@ -34,22 +43,22 @@ body {
   padding-left: 10px;
   padding-right: 10px;
   background-color: cadetblue;
-  flex-wrap: wrap;
-  text-wrap: wrap;
   font-size: 30px;
-  width: 450px;
   direction: rtl;
 }
 
 .row {
   display: flex;
-  flex: 1;
+  flex: 1 0;
   justify-content: stretch;
   align-items: stretch;
   border-right: solid;
   border-left: solid;
-  border-top-width: 0.1px;
+  border-top-width: 1px;
+  height: 20%;
 }
+
+
 
 button {
   flex: 1;
